--- a/TPDataBizHackathon.Web/Views/Shared/_Layout.cshtml
+++ b/TPDataBizHackathon.Web/Views/Shared/_Layout.cshtml
@@ -19,15 +19,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("TPDataBiz", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
                     @*<li>@Html.ActionLink("Sobre", "About", "Home")</li>*@
                     @*<li>@Html.ActionLink("Contato", "Contact", "Home")</li>*@
-                    <li>@Html.ActionLink("Tábua Maré", "Tabua", "TabuaMare")</li>
-                    <li>@Html.ActionLink("Clima Tempo", "Semana", "ClimaTempo")</li>
+                    @*<li>@Html.ActionLink("Tábua Maré", "Tabua", "TabuaMare")</li>*@
+                    @*<li>@Html.ActionLink("Clima Tempo", "Semana", "ClimaTempo")</li>*@
+                    <li>@Html.ActionLink("Perfis", "Perfis", "Perfis")</li>
                 </ul>
             </div>
         </div>
